--- a/sessionClass.html
+++ b/sessionClass.html
@@ -79,23 +79,24 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/703" target="_blank"
-            >Catharsis</a
-          >,
-          <a href="./Tunes/macedonian-horo.html" target="_blank"
-            >Macedonian Oro</a
+          <a href="https://thesession.org/tunes/popular" target="_blank"
+            >Irish Session Classics</a
           >
         </p>
         <!-- </div>
       <div class="tunes-week"> -->
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/popular" target="_blank"
-            >Exploring Irish session classics</a
-          >
+          <a href="https://thesession.org/tunes/880" target="_blank"
+            >Da New Rigged Ship</a
+          >: Reel, A
+        </p>
+        <p class="tune-name">
+          <a href="https://thesession.org/tunes/482" target="_blank"
+            >The Foxhunter</a
+          >: Slip Jig, D
         </p>
       </div>
-      <div></div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
