--- a/musicFiles/chords/chord-page/the-butterfly.html
+++ b/musicFiles/chords/chord-page/the-butterfly.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Da Lounge Bar</title>
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <title>The Butterfly</title>
+    <link rel="stylesheet" href="/./styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,35 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="../index.html">Whangarei Tunes</a>
+          <a href="/index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="../tunes.html">Tunes</a>
+          <a class="nav-name" href="/tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="../sessionClass.html">Session Class</a>
+                <a href="/sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="../fridayTunes.html">Friday Tunes</a>
+                <a href="/fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../resources.html">Resources</a>
+          <a class="nav-name" href="/resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../articles.html">Articles</a>
+          <a class="nav-name" href="/articles.html">Articles</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-name" href="/chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="../images/facebook.png"
+              src="/./images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -55,32 +58,21 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This transcription came from Hedningarna's self-titled album and
-        translates to 'Bear Tune'. They play it in the key of E but I've
-        transposed it here in the key of G (despite the number of #s!). It uses
-        a major scale with an augmented (raised) fourth which is common in
-        Nordic music. There is a closely related tune called Björndansen, or
-        'Bear Dance'.
+        The original tune by Tommy Potts was unaccompanied, so anyone's chords
+        are up for interpretation on this one. Common substitutions include:
+        <br />
+        Em and G <br />
+        Em and C <br />
+        C and Am <br />
+        D and Bm
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../musicFiles/björnlåten.jpg"
+        src="/./musicFiles/chords/the-butterfly-chords.jpg"
         alt="Sheet music"
       />
-    </div>
-    <div class="musicPlayer">
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/12AbnyXWVBGDtsej2iVPIn?utm_source=generator"
-        width="100%"
-        height="250"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
     </div>
   </body>
 </html>
