--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -41,6 +41,9 @@
           <a class="nav-name" href="articles.html">Articles</a>
         </li>
         <li class="nav-item">
+          <a class="nav-name" href="chords.html">Chords</a>
+        </li>
+        <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
