Test 3 for chord page link

--- a/chords.html
+++ b/chords.html
@@ -68,7 +68,7 @@
         <ul>
           <li class="tune-name">
             <a
-              href="/./musicFiles/chords/chord-page/the-butterfly.html"
+              href="./musicFiles/chords/chord-page/the-butterfly.html"
               target="_blank"
               >The Butterfly</a
             >: Slip Jig, Em
