More trial and error

--- a/chords.html
+++ b/chords.html
@@ -48,7 +48,7 @@
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="./images/facebook"
+              src="./images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
