--- a/musicFiles/chords/chord-page/the-butterfly.html
+++ b/musicFiles/chords/chord-page/the-butterfly.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>The Butterfly</title>
-    <link rel="stylesheet" href="/././././styles/styles.css" />
+    <link rel="stylesheet" href="../../../styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="/././index.html">Whangarei Tunes</a>
+          <a href="../../../index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
@@ -48,7 +48,7 @@
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="/./images/facebook.png"
+              src="../../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -70,7 +70,7 @@
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="/./musicFiles/chords/the-butterfly-chords.jpg"
+        src="../../.././musicFiles/chords/the-butterfly-chords.jpg"
         alt="Sheet music"
       />
     </div>
