--- a/musicFiles/chords/chord-page/crested-hens.html
+++ b/musicFiles/chords/chord-page/crested-hens.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Crested Hens</title>
-    <link rel="stylesheet" href="/./styles/styles.css" />
+    <link rel="stylesheet" href="../../../styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,7 +17,7 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="/index.html">Whangarei Tunes</a>
+          <a href="../../../index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
