--- a/musicFiles/chords/chord-page/the-butterfly.html
+++ b/musicFiles/chords/chord-page/the-butterfly.html
@@ -22,26 +22,26 @@
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="/./tunes.html">Tunes</a>
+          <a class="nav-name" href="../../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="/./sessionClass.html">Session Class</a>
+                <a href="../../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="/./fridayTunes.html">Friday Tunes</a>
+                <a href="../../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/./resources.html">Resources</a>
+          <a class="nav-name" href="../../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/./articles.html">Articles</a>
+          <a class="nav-name" href="../../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/./chords.html">Chords</a>
+          <a class="nav-name" href="../../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
