Crested hens chord links updated, file structure test w/ da lounge bar

--- a/musicFiles/chords/chord-page/crested-hens.html
+++ b/musicFiles/chords/chord-page/crested-hens.html
@@ -22,33 +22,33 @@
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="/tunes.html">Tunes</a>
+          <a class="nav-name" href="../../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="/sessionClass.html">Session Class</a>
+                <a href="../../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="/fridayTunes.html">Friday Tunes</a>
+                <a href="../../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/resources.html">Resources</a>
+          <a class="nav-name" href="../../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/articles.html">Articles</a>
+          <a class="nav-name" href="../../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/chords.html">Chords</a>
+          <a class="nav-name" href="../../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="/./images/facebook.png"
+              src="../../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -62,7 +62,7 @@
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="/./musicFiles/chords/crested-hens-chords.jpg"
+        src="../../.././musicFiles/chords/crested-hens-chords.jpg"
         alt="Sheet music"
       />
     </div>
