DLB file structure test

--- a/musicFiles/chords/da-lounge-bar.html
+++ b/musicFiles/chords/da-lounge-bar.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Da Lounge Bar</title>
-    <link rel="stylesheet" href="/./styles/styles.css" />
+    <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,38 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="/index.html">Whangarei Tunes</a>
+          <a href="../.././index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="/tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="/sessionClass.html">Session Class</a>
+                <a href="../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="/fridayTunes.html">Friday Tunes</a>
+                <a href="../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/resources.html">Resources</a>
+          <a class="nav-name" href="../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/articles.html">Articles</a>
+          <a class="nav-name" href="../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/chords.html">Chords</a>
+          <a class="nav-name" href="../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="/./images/facebook.png"
+              src="../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -69,7 +69,7 @@
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="/./musicFiles/chords/da-lounge-bar-chords.jpg"
+        src="../.././musicFiles/chords/da-lounge-bar-chords.jpg"
         alt="Sheet music"
       />
     </div>
