Tried new filepath for Flatbush

--- a/chords.html
+++ b/chords.html
@@ -81,16 +81,12 @@
             >: Waltz, Em
           </li>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/chord-page/da-lounge-bar.html"
-              target="_blank"
+            <a href="./musicFiles/chords/da-lounge-bar.html" target="_blank"
               >Da Lounge Bar</a
             >: Jig, D
           </li>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/chord-page/flatbush.html"
-              target="_blank"
+            <a href="./musicFiles/chords/flatbush.html" target="_blank"
               >Flatbush Waltz</a
             >: Gm
           </li>
