Updated chord page file paths

--- a/chords.html
+++ b/chords.html
@@ -67,16 +67,12 @@
       <div class="container">
         <ul>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/chord-page/the-butterfly.html"
-              target="_blank"
+            <a href="./musicFiles/chords/the-butterfly.html" target="_blank"
               >The Butterfly</a
             >: Slip Jig, Em
           </li>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/chord-page/crested-hens.html"
-              target="_blank"
+            <a href="./musicFiles/chords/crested-hens.html" target="_blank"
               >Crested Hens</a
             >: Waltz, Em
           </li>
@@ -91,29 +87,28 @@
             >: Gm
           </li>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/chord-page/josephins.html"
-              target="_blank"
+            <a href="./musicFiles/chords/josephins.html" target="_blank"
               >Josephins Dopvals</a
             >: Waltz, F
           </li>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/chord-page/jump-at-the-sun.html"
-              target="_blank"
+            <a href="./musicFiles/chords/jump-at-the-sun.html" target="_blank"
               >Jump At The Sun</a
             >: Jig, Gm
           </li>
           <li class="tune-name">
-            <a
-              href="./musicFiles/chords/chord-page/maison-de-glace.html"
-              target="_blank"
+            <a href="./musicFiles/chords/macedonian-horo.html" target="_blank"
+              >Macedonian Horo</a
+            >: Horo, A
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/maison-de-glace.html" target="_blank"
               >Maison De Glace</a
             >: Jig, D
           </li>
           <li class="tune-name">
             <a
-              href="./musicFiles/chords/chord-page/push-the-pigs-foot.html"
+              href="./musicFiles/chords/push-the-pigs-foot.html"
               target="_blank"
               >Push That Pig's Foot A Little Further In The Fire</a
             >: Reel, G
