--- a/musicFiles/chords/josephins.html
+++ b/musicFiles/chords/josephins.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Push The Pig's Foot A Little Closer To The Fire</title>
-    <link rel="stylesheet" href="/./styles/styles.css" />
+    <title>Josephins Dopvals</title>
+    <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,38 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="/index.html">Whangarei Tunes</a>
+          <a href="../.././index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="/tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="/sessionClass.html">Session Class</a>
+                <a href="../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="/fridayTunes.html">Friday Tunes</a>
+                <a href="../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/resources.html">Resources</a>
+          <a class="nav-name" href="../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/articles.html">Articles</a>
+          <a class="nav-name" href="../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/chords.html">Chords</a>
+          <a class="nav-name" href="../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="/./images/facebook.png"
+              src="../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -58,24 +58,25 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This chart is based on the version by Bruce Molsky (see below). The
-        rhythm pattern on the guitar is pretty typical for this style of music.
-        The simplest way to play this would be to just use a G chord the whole
-        time. The C chords in the chart can be swapped out with G, though I
-        think it's nice to keep the D chords in near the end of phrases.
+        This is the original key, though I've mostly heard in transposed to the
+        key of G in sessions. On guitar, I'd suggest a capo on the 3rd fret if
+        you're playing in F, so a D shape will be F. Otherwise you'll get tired
+        of barring chords, plus you won't get to play with as many open strings.
+        It's pretty straight-forward to transpose up to G, which suits an open
+        position - just go up one step for each chord.
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="/./musicFiles/chords/push-the-pigs-foot-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/josephins-chords.jpg"
         alt="Sheet music"
       />
     </div>
     <div class="musicPlayer">
       <iframe
         style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/4YSge8sT1OIc24ASWEYXlS?utm_source=generator"
+        src="https://open.spotify.com/embed/track/4da0Ebx5kOgnbRyPhpBHSP?utm_source=generator"
         width="100%"
         height="250"
         frameborder="0"
