--- a/musicFiles/chords/the-butterfly.html
+++ b/musicFiles/chords/the-butterfly.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Josephins Dopvals</title>
-    <link rel="stylesheet" href="/./styles/styles.css" />
+    <title>The Butterfly</title>
+    <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,38 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="/index.html">Whangarei Tunes</a>
+          <a href="../.././index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="/tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="/sessionClass.html">Session Class</a>
+                <a href="../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="/fridayTunes.html">Friday Tunes</a>
+                <a href="../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/resources.html">Resources</a>
+          <a class="nav-name" href="../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/articles.html">Articles</a>
+          <a class="nav-name" href="../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/chords.html">Chords</a>
+          <a class="nav-name" href="../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="/./images/facebook.png"
+              src="../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -58,32 +58,21 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This is the original key, though I've mostly heard in transposed to the
-        key of G in sessions. On guitar, I'd suggest a capo on the 3rd fret if
-        you're playing in F, so a D shape will be F. Otherwise you'll get tired
-        of barring chords, plus you won't get to play with as many open strings.
-        It's pretty straight-forward to transpose up to G, which suits an open
-        position - just go up one step for each chord.
+        The original tune by Tommy Potts was unaccompanied, so anyone's chords
+        are up for interpretation on this one. Common substitutions include:
+        <br />
+        Em and G <br />
+        Em and C <br />
+        C and Am <br />
+        D and Bm
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="/./musicFiles/chords/josephins-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/the-butterfly-chords.jpg"
         alt="Sheet music"
       />
-    </div>
-    <div class="musicPlayer">
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/4da0Ebx5kOgnbRyPhpBHSP?utm_source=generator"
-        width="100%"
-        height="250"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
     </div>
   </body>
 </html>
