--- a/musicFiles/chords/crested-hens.html
+++ b/musicFiles/chords/crested-hens.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Butterfly</title>
-    <link rel="stylesheet" href="../../../styles/styles.css" />
+    <title>Crested Hens</title>
+    <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,38 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="../../../index.html">Whangarei Tunes</a>
+          <a href="../.././index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="../../.././tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="../../.././sessionClass.html">Session Class</a>
+                <a href="../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="../../.././fridayTunes.html">Friday Tunes</a>
+                <a href="../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../../.././resources.html">Resources</a>
+          <a class="nav-name" href="../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../../.././articles.html">Articles</a>
+          <a class="nav-name" href="../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../../.././chords.html">Chords</a>
+          <a class="nav-name" href="../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="../../.././images/facebook.png"
+              src="../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -57,22 +57,26 @@
       </ul>
     </header>
     <div class="tuneDescription text">
-      <p>
-        The original tune by Tommy Potts was unaccompanied, so anyone's chords
-        are up for interpretation on this one. Common substitutions include:
-        <br />
-        Em and G <br />
-        Em and C <br />
-        C and Am <br />
-        D and Bm
-      </p>
+      <p>This chart is based on the version by Solas (see clip below).</p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../../.././musicFiles/chords/the-butterfly-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/crested-hens-chords.jpg"
         alt="Sheet music"
       />
+    </div>
+    <div class="musicPlayer">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/3kw27jzUk7TLy6hxygtAmr?utm_source=generator"
+        width="100%"
+        height="250"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
     </div>
   </body>
 </html>
