--- a/musicFiles/chords/maison-de-glace.html
+++ b/musicFiles/chords/maison-de-glace.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Macedonian Horo</title>
-    <link rel="stylesheet" href="/./styles/styles.css" />
+    <title>Maison De Glase</title>
+    <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,38 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="/index.html">Whangarei Tunes</a>
+          <a href="../.././index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="/tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="/sessionClass.html">Session Class</a>
+                <a href="../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="/fridayTunes.html">Friday Tunes</a>
+                <a href="../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/resources.html">Resources</a>
+          <a class="nav-name" href="../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/articles.html">Articles</a>
+          <a class="nav-name" href="../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="/chords.html">Chords</a>
+          <a class="nav-name" href="../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="/./images/facebook.png"
+              src="../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -58,29 +58,30 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This chart is based on what I hear as a more traditional interpretation,
-        though I'd bet that most people who may know this tune in sessions would
-        be more familiar with the version by
-        <a
-          href="https://open.spotify.com/track/5UF4dPp7fzZLvS6ob8SDik?si=9593732b2e9f4439"
-          target="_blank"
-          >Flook</a
-        >. To play the rhythm, evenly count each 7 beats per measure. This
-        particular piece uses the grouping of 3 2 2 with the accent on the first
-        beat of each group (<strong>1</strong> 2 3 <strong>1</strong> 2
-        <strong>1</strong> 2). I learned to count this rhythm by saying words
-        consisting of 2 and 3 syllables eg "Pineapple Mango Mango", emphasizing
-        or accenting the first syllable of each word. I've also heard people use
-        'long and 'short' beats, in this case 'long short short'.
+        This chart is based on the recording 'Play On' by Celtic Fiddle
+        Festival, which features the author's brother, André Brunet. I was
+        unable to find a source recording by Réjean Brunet, however there is a
+        live version of him playing piano with Andre on YouTube.
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="/./musicFiles/chords/macedonian-horo-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/maison-de-glace-chords.jpg"
         alt="Sheet music"
       />
     </div>
-    <!-- <div class="musicPlayer"></div> -->
+    <!-- <div class="musicPlayer">
+      <iframe
+        style="border-radius: 12px"
+        src="https://open.spotify.com/embed/track/0jJGbM6X6IKbIsvdNMmFYz?utm_source=generator"
+        width="100%"
+        height="352"
+        frameborder="0"
+        allowfullscreen=""
+        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+        loading="lazy"
+      ></iframe>
+    </div> -->
   </body>
 </html>
