--- a/musicFiles/chords/push-the-pigs-foot.html
+++ b/musicFiles/chords/push-the-pigs-foot.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Crested Hens</title>
-    <link rel="stylesheet" href="../../../styles/styles.css" />
+    <title>Push The Pig's Foot A Little Closer To The Fire</title>
+    <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,38 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="../../../index.html">Whangarei Tunes</a>
+          <a href="../.././index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="../../.././tunes.html">Tunes</a>
+          <a class="nav-name" href="../.././tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="../../.././sessionClass.html">Session Class</a>
+                <a href="../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="../../.././fridayTunes.html">Friday Tunes</a>
+                <a href="../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../../.././resources.html">Resources</a>
+          <a class="nav-name" href="../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../../.././articles.html">Articles</a>
+          <a class="nav-name" href="../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../../.././chords.html">Chords</a>
+          <a class="nav-name" href="../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="../../.././images/facebook.png"
+              src="../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -57,19 +57,25 @@
       </ul>
     </header>
     <div class="tuneDescription text">
-      <p>This chart is based on the version by Solas (see clip below).</p>
+      <p>
+        This chart is based on the version by Bruce Molsky (see below). The
+        rhythm pattern on the guitar is pretty typical for this style of music.
+        The simplest way to play this would be to just use a G chord the whole
+        time. The C chords in the chart can be swapped out with G, though I
+        think it's nice to keep the D chords in near the end of phrases.
+      </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../../.././musicFiles/chords/crested-hens-chords.jpg"
+        src="../.././musicFiles/chords/chord-page/push-the-pigs-foot-chords.jpg"
         alt="Sheet music"
       />
     </div>
     <div class="musicPlayer">
       <iframe
         style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/3kw27jzUk7TLy6hxygtAmr?utm_source=generator"
+        src="https://open.spotify.com/embed/track/4YSge8sT1OIc24ASWEYXlS?utm_source=generator"
         width="100%"
         height="250"
         frameborder="0"
