Corrected session page links

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -182,8 +182,14 @@
             >: Slip jig, Em
           </li>
           <li class="tune-name">
-            <a href="./Tunes/jump-at-the-sun.html" target="_blank">Coffee</a>:
-            Jig, Am
+            <a href="https://thesession.org/tunes/703" target="_blank"
+              >Catharsis</a
+            >: Reel, Gm
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/6697" target="_blank"
+              >Coffee</a
+            >: Jig, Am
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/562" target="_blank"
@@ -248,11 +254,6 @@
               >Jump At The Sun</a
             >: Jig, Gm
           </li>
-          <!-- <li class="tune-name">
-            <a href="https://thesession.org/tunes/736" target="_blank"
-              >Jump At The Sun</a
-            >: Jig, Gm
-          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/kesh-jig/"
@@ -281,6 +282,11 @@
             <a href="https://thesession.org/tunes/8853" target="_blank"
               >Da Lounge Bar</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/macedonian-horo.html" target="_blank"
+              >Macedonian Horo</a
+            >: Horo, A
           </li>
           <li class="tune-name">
             <a
