Added new chords charts

--- a/chords.html
+++ b/chords.html
@@ -87,6 +87,11 @@
             >: Gm
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/foxhunter.html" target="_blank"
+              >The Foxhunter</a
+            >: Slip Jig, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/josephins.html" target="_blank"
               >Josephins Dopvals</a
             >: Waltz, F
@@ -105,6 +110,13 @@
             <a href="./musicFiles/chords/maison-de-glace.html" target="_blank"
               >Maison De Glace</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a
+              href="./musicFiles/chords/da-new-rigged-ship.html"
+              target="_blank"
+              >Da New Rigged Ship</a
+            >: Reel or Hornpipe, A
           </li>
           <li class="tune-name">
             <a
