--- a/musicFiles/chords/da-new-rigged-ship.html
+++ b/musicFiles/chords/da-new-rigged-ship.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Jump At The Sun</title>
-    <link rel="stylesheet" href="../styles/styles.css" />
+    <title>Da New Rigged Ship</title>
+    <link rel="stylesheet" href="../.././styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -17,38 +17,38 @@
     <header class="header">
       <div class="title">
         <h1 class="title-text">
-          <a href="../index.html">Whangarei Tunes</a>
+          <a href="../.././index.html">Whangarei Tunes</a>
         </h1>
       </div>
       <ul class="nav">
         <li class="nav-item">
-          <a class="nav-name" href="../tunes.html">Tunes</a>
+          <a class="nav-name" href="../../tunes.html">Tunes</a>
           <div class="dropdown-menu">
             <ul class="dropdown">
               <li class="dropdown-item">
-                <a href="../sessionClass.html">Session Class</a>
+                <a href="../.././sessionClass.html">Session Class</a>
               </li>
               <li class="dropdown-item">
-                <a href="../fridayTunes.html">Friday Tunes</a>
+                <a href="../.././fridayTunes.html">Friday Tunes</a>
               </li>
             </ul>
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../resources.html">Resources</a>
+          <a class="nav-name" href="../.././resources.html">Resources</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../articles.html">Articles</a>
+          <a class="nav-name" href="../.././articles.html">Articles</a>
         </li>
         <li class="nav-item">
-          <a class="nav-name" href="../chords.html">Chords</a>
+          <a class="nav-name" href="../.././chords.html">Chords</a>
         </li>
         <li class="nav-item">
           <a
             href="https://www.facebook.com/groups/whangareifolkrootstraditionalmusic"
             target="_blank"
             ><img
-              src="../images/facebook.png"
+              src="../.././images/facebook.png"
               alt="facebook logo"
               width="17"
               height="17"
@@ -58,24 +58,22 @@
     </header>
     <div class="tuneDescription text">
       <p>
-        This transcription came straight from the author of the tune, which you
-        can listen to
-        <a href="https://www.youtube.com/watch?v=Ua3JRyqtlQE" target="_blank"
-          >here</a
-        >
-        (beginning at 1:35). Visit
-        <a href="https://thesession.org/tunes/736" target="blank"
-          >The Session</a
-        >
-        to see different versions and keys plus discussion and comments.
+        The chords for this popular Shetland tune are based on the melody. It's
+        becoming increasingly common to pair this with a Nordic tune with the
+        similarly titled 'The Fully Rigged Ship'. It can be played with a
+        swinging feel like a hornpipe, though I notice that most people play it
+        faster and like a reel.
       </p>
     </div>
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../musicFiles/jumpAtTheSun.jpg"
+        src="../.././musicFiles/chords/chord-page/da-new-rigged-ship-chords.jpg"
         alt="Sheet music"
       />
     </div>
+    <!-- <div class="musicPlayer">
+      
+    </div> -->
   </body>
 </html>
