--- a/sessionClass.html
+++ b/sessionClass.html
@@ -84,18 +84,24 @@
         <p class="tune-name">
           <a href="https://thesession.org/tunes/popular" target="_blank"
             >Irish Session Classics</a
+          >,
+          <a href="https://thesession.org/tunes/880" target="_blank"
+            >Da New Rigged Ship</a
+          >,
+          <a href="https://thesession.org/tunes/482" target="_blank"
+            >The Foxhunter</a
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/880" target="_blank"
-            >Da New Rigged Ship</a
-          >: Reel, A
+          <a href="https://thesession.org/tunes/20" target="_blank"
+            >The Cup Of Tea</a
+          >: Reel, Em
         </p>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/482" target="_blank"
-            >The Foxhunter</a
-          >: Slip Jig, D
+          <a href="https://thesession.org/tunes/88" target="_blank"
+            >The Rolling Waves</a
+          >: Jig, D mix
         </p>
       </div>
       <div>
