Added chord chart links to chord page

--- a/chords.html
+++ b/chords.html
@@ -77,6 +77,11 @@
             >: Waltz, Em
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/cup-of-tea.html" target="_blank"
+              >The Cup of Tea</a
+            >: Reel, Em dor
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/da-lounge-bar.html" target="_blank"
               >Da Lounge Bar</a
             >: Jig, D
@@ -124,6 +129,11 @@
               target="_blank"
               >Push That Pig's Foot A Little Further In The Fire</a
             >: Reel, G
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/rolling-waves.html" target="_blank"
+              >The Rolling Waves</a
+            >: Jig, D
           </li>
         </ul>
       </div>
