Updates to tunes, temporarily removed articles link

--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -37,9 +37,9 @@
         <li class="nav-item">
           <a class="nav-name" href="resources.html">Resources</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-name" href="articles.html">Articles</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-name" href="chords.html">Chords</a>
         </li>
@@ -317,6 +317,11 @@
               target="_blank"
               >Out On The Ocean</a
             >: Jig, G
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/325" target="_blank">
+              Patsy Geary's</a
+            >: Slide, D
           </li>
           <li class="tune-name">
             <a
