--- a/sessionClass.html
+++ b/sessionClass.html
@@ -37,9 +37,9 @@
         <li class="nav-item">
           <a class="nav-name" href="resources.html">Resources</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-name" href="articles.html">Articles</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-name" href="chords.html">Chords</a>
         </li>
@@ -68,6 +68,16 @@
       <div class="container-content cc-tunes">
         <div class="text">
           <p>
+            The Monday Session Classes are welcome to all ability levels. This
+            is a great opportunity where folks can participate in a group
+            setting and build up their repertoire. We begin at 3:30pm and spend
+            the first hour or so learning new tunes, technique and more. The
+            second portion (5-6pm) is spent reviewing all of the tunes we know
+            together. This is the closest thing to a public session that happens
+            in the community at the moment. Drop in to either whenever it suits.
+          </p>
+           
+          <p>
             Most of the tunes below redirect to either the NZ Irish Session
             (irish.session.nz) or The Session (thesession.org). Both sites are
             worth checking out as they offer slightly different features. For
@@ -82,27 +92,15 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tunes of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/popular" target="_blank"
-            >Irish Session Classics</a
+          <a href="https://thesession.org/tunes/20" target="_blank"
+            >The Cup Of Tea</a
           >,
-          <a href="https://thesession.org/tunes/880" target="_blank"
-            >Da New Rigged Ship</a
-          >,
-          <a href="https://thesession.org/tunes/482" target="_blank"
-            >The Foxhunter</a
+          <a href="https://thesession.org/tunes/88" target="_blank"
+            >The Rolling Waves</a
           >
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
-          <a href="https://thesession.org/tunes/20" target="_blank"
-            >The Cup Of Tea</a
-          >: Reel, Em
-        </p>
-        <p class="tune-name">
-          <a href="https://thesession.org/tunes/88" target="_blank"
-            >The Rolling Waves</a
-          >: Jig, D mix
-        </p>
+        <p class="tune-name">Let's try to make it through the repertoire!</p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
@@ -221,6 +219,11 @@
             >: March, Em
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/482" target="_blank"
+              >The Foxhunter</a
+            >: Slip jig, D
+          </li>
+          <li class="tune-name">
             <a
               href="https://dev.session.nz/tunes-archive/green-cake/"
               target="_blank"
@@ -289,6 +292,11 @@
             <a href="https://thesession.org/tunes/9002" target="_blank"
               >Maison De Glace</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/880" target="_blank"
+              >Da New Rigged Ship</a
+            >: Reel or Hornpipe, A
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/12963" target="_blank"
