--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
         <li class="nav-item">
           <a class="nav-name" href="resources.html">Resources</a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a class="nav-name" href="articles.html">Articles</a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a class="nav-name" href="chords.html">Chords</a>
         </li>
